# ace

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
fme/ace/data_loading/: augmentation.py  gridded_data.py  inference.py
fme/ace/inference/data_writer/: file_writer.py  main.py  raw.py  zarr.py
fme/ace/step/: fcn3.py
fme/ace/stepper/: single_module.py
fme/core/: coordinates.py  ema.py  gridded_ops.py  loss.py  optimization.py
fme/core/dataset/: properties.py  xarray.py
fme/core/distributed/: checkpointing.py  distributed.py  model_torch_distributed.py
fme/core/distributed/parallel_tests/: test_area_weighted_ops_spatial.py  test_data_loading_spatial.py  test_data_writing_spatial.py  test_gather_spatial.py  test_loss_spatial.py  test_model_torch_distributed.py
fme/core/generics/: trainer.py
fme/core/registry/: module.py
fme/fme/: sht_fix.py
fme/fme/ace/inference/: evaluator.py
fme/inference_output/: config.yaml
inference/: CMakeLists.txt  inference.cpp  inference.hpp
inference_output/: config.yaml
